Added privacy policy

--- a/index.html
+++ b/index.html
@@ -485,8 +485,8 @@
                     <h4>Lenker</h4>
 
                     <ul class="list-links">
-                        <li><a href="#">Brukervilkår</a></li>
-                        <li><a href="#">Personvernerklæring</a></li>
+                        <li><a href="https://russeplattformen.no/brukervilkar.html">Brukervilkår</a></li>
+                        <li><a href="https://russeplattformen.no/personvernerklering.html">Personvernerklæring</a></li>
                     </ul>	      		
                             
                 </div> <!-- end footer-site-links --> 
