Added logo to header and footer

--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
    ================================================== -->
    <header id="header" class="row">   
 
+        <div>
+            <img width="50" height="40" src="logo2.svg">
+        </div>
+
    		<div class="header-logo">
 	        <a href="index.html">Russeplattformen.no</a>
 	    </div>
@@ -75,7 +79,6 @@
 
             <div class="row contents">                     
                 <div class="home-content-left">
-
                     <h3 data-aos="fade-up">Velkommen til Russeplattformen</h3>
 
                     <h1 data-aos="fade-up">
@@ -496,6 +499,8 @@
 
                 <div class="col-four md-1-2 tab-full footer-subscribe">
                     <h4>Russeplattformen.no</h4>
+                    
+                    <img width="176" height="100" src="logo2.svg">
                     <!--<h4>Our Newsletter</h4>
 
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
