--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             </div>
             <div class="col-eight">
                 <p class="lead" data-aos="fade-up">
-                    Russeplattformen.no appen lar deg lage digitale russekort som du kan dele med andre i appen og på nett. Lag en gruppe med vennene dine og og se hvem som klarer å samle flest poeng. Du får poeng når du bruker appen, deler ut kortet ditt og når du samler kort selv. Appen er tilgjengelig for alle, men det er bare russ som kan lage kort.
+                    Russeplattformen.no appen lar deg lage digitale russekort som du kan dele med andre i appen og på nett. Lag en gruppe med vennene dine og se hvem som klarer å samle flest poeng. Du får poeng når du bruker appen, deler ut kortet ditt og når du samler kort selv. Appen er tilgjengelig for alle, men det er bare russ som kan lage kort.
                 </p>
                 <p class="lead" data-aos="fade-up">
                     Appen er gratis å laste ned fra App Store og Google Play.
@@ -481,7 +481,7 @@
                     <h4>Kontakt</h4>
 
                     <p>
-                    christoffer@cholytics.com <br>
+                    kontakt@russeplattformen.no <br>
                     Org. nr.: 930 071 455  
                     </p>                    
 
