--- a/personvernerklering.html
+++ b/personvernerklering.html
@@ -32,7 +32,7 @@ Serverene hvor opplysningene lagres er lokalisert i Frankfurt, Tyskland.
 4. Behandlingsgrunnlag: Grunnlaget for behandling av personopplysningene er at bruker har gitt samtykke.
 
 5. Kontakt, rettigheter og klage
-Du kan kontakte ansvarlig databehandler på christoffer@cholytics.com. 
+Du kan kontakte ansvarlig databehandler på personvern@russeplattformen.no 
 Bruk denne e-post adressen hvis du ønsker å utøve rettighetene dine til: innsyn, retting, sletting, begrensning, protestere, dataportabilitet og informasjon. 
 Dine rettigheter er beskrevet i detalj av Datatilsynet: https://www.datatilsynet.no/rettigheter-og-plikter/den-registrertes-rettigheter/
 Hvis du mener vi bryter personvernlovverket ønsker vi at du kontakter oss så kan vi finne en løsning sammen. Du kan også kontakte Datatilsynet: https://www.datatilsynet.no
