--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
                     </h1>
 
                     <div class="buttons" data-aos="fade-up">
-                        <a href="" style="display: inline-block; overflow: hidden; border-radius: 13px; width: 250px; height: 83px;"><img height="100px" src="https://tools.applemediaservices.com/api/badges/download-on-the-app-store/black/no-no?size=250x83&amp;releaseDate=1255046400" alt="Download on the App Store" style="border-radius: 13px; width: 250px; height: 83px;"></a>
-                        <a href=''><img height="100px" width="250px" alt='Tilgjengelig på Google Play' src='https://play.google.com/intl/en_us/badges/static/images/badges/no_badge_web_generic.png'/></a>
+                        <a href="https://apps.apple.com/us/app/russeplattformen/id6445826822" style="display: inline-block; overflow: hidden; border-radius: 13px; width: 250px; height: 83px;"><img height="100px" src="https://tools.applemediaservices.com/api/badges/download-on-the-app-store/black/no-no?size=250x83&amp;releaseDate=1255046400" alt="Download on the App Store" style="border-radius: 13px; width: 250px; height: 83px;"></a>
+                        <a href='https://play.google.com/store/apps/details?id=com.christofferholmesland.russekort'><img height="100px" width="250px" alt='Tilgjengelig på Google Play' src='https://play.google.com/intl/en_us/badges/static/images/badges/no_badge_web_generic.png'/></a>
                     </div>                                         
                 </div>
 
@@ -439,8 +439,8 @@
                 </p>-->
 
                 <ul class="download-badges">
-                    <a href="" style="display: inline-block; overflow: hidden; border-radius: 13px; width: 250px; height: 83px;"><img height="100px" src="https://tools.applemediaservices.com/api/badges/download-on-the-app-store/black/no-no?size=250x83&amp;releaseDate=1255046400" alt="Download on the App Store" style="border-radius: 13px; width: 250px; height: 83px;"></a>
-                    <a href=''><img height="100px" width="250px" alt='Tilgjengelig på Google Play' src='https://play.google.com/intl/en_us/badges/static/images/badges/no_badge_web_generic.png'/></a>
+                    <a href="https://apps.apple.com/us/app/russeplattformen/id6445826822" style="display: inline-block; overflow: hidden; border-radius: 13px; width: 250px; height: 83px;"><img height="100px" src="https://tools.applemediaservices.com/api/badges/download-on-the-app-store/black/no-no?size=250x83&amp;releaseDate=1255046400" alt="Download on the App Store" style="border-radius: 13px; width: 250px; height: 83px;"></a>
+                    <a href='https://play.google.com/store/apps/details?id=com.christofferholmesland.russekort'><img height="100px" width="250px" alt='Tilgjengelig på Google Play' src='https://play.google.com/intl/en_us/badges/static/images/badges/no_badge_web_generic.png'/></a>
                 </ul>
 
             </div>
